Refactoring of diff methods and packages